objects/CMPL123__CMPL_App_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Application level config parameters</description>
    <fields>
        <fullName>CMPL123CME__Enable_EMDR_Required_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EMDR Required Fields?</description>
        <inlineHelpText>Enable EMDR Required Fields?</inlineHelpText>
        <label>Enable EMDR Required Fields?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MEDDEV_Rev7__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEDDEV Rev7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MEDDEV_XML_Email_Id__c</fullName>
        <description>Split with Comma</description>
        <inlineHelpText>Enter email Id's separated by comma(,). Use $USER if email should go to the current Salesforce user.</inlineHelpText>
        <label>MEDDEV-XML Recipient Email Id(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Read_Only_Fields__c</fullName>
        <description>EMDR Read Only Fields</description>
        <inlineHelpText>Provide field API names with comma separated.</inlineHelpText>
        <label>EMDR Read Only Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Show_Add_Investigation_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show/Hide Add Investigation Button</description>
        <inlineHelpText>Uncheck to Hide Add Investigation Button</inlineHelpText>
        <label>Show Add Investigation Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Show_Add_Question_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show/Hide Add Question Button</description>
        <inlineHelpText>Uncheck to Hide Add Question Button</inlineHelpText>
        <label>Show Add Question Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__ACS_URL__c</fullName>
        <description>Assertion Consumer Service (ACS) URL</description>
        <inlineHelpText>Assertion Consumer Service (ACS) URL. A public site or a URL where SAML IDP can post the response.</inlineHelpText>
        <label>ACS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__Allow_Task_Auto_Promotion_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Task Auto Promotion Update</description>
        <inlineHelpText>Allow Task Auto Promotion Update</inlineHelpText>
        <label>Allow Task Auto Promotion Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__CSP_Connected_App_Name__c</fullName>
        <label>CSP Connected App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Client_Id__c</fullName>
        <description>Salesforce Remote App Client Id</description>
        <inlineHelpText>Salesforce Remote App Client Id</inlineHelpText>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Client_Secret__c</fullName>
        <description>Salesforce Remote App Client Secret</description>
        <inlineHelpText>Salesforce Remote App Client Secret</inlineHelpText>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Don_t_auto_fill_Username_for_E_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the checkbox if you don’t want to auto-fill Username in E-Sign.</inlineHelpText>
        <label>Don't auto-fill Username for E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__E_sign_password_expire_in_days__c</fullName>
        <defaultValue>90</defaultValue>
        <description>E-sign password expire in days</description>
        <inlineHelpText>E-sign password expire in days</inlineHelpText>
        <label>E-Sign password expire in days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Enable_AuditTrail_Translation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable AuditTrail Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Entity_Id__c</fullName>
        <description>Identity Provider (IDP) unique URL where SAML request can be validated.</description>
        <inlineHelpText>Identity Provider (IDP) unique URL where SAML request can be validated.</inlineHelpText>
        <label>Entity Id</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__Family_Tree_Report_Named_Credential__c</fullName>
        <description>Family Tree Report Named Credential</description>
        <inlineHelpText>Family Tree Report Named Credential</inlineHelpText>
        <label>Family Tree Report Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Force_Authentication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force Authentication Required?</description>
        <inlineHelpText>Force Authentication Required?</inlineHelpText>
        <label>Force Authentication Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Identity_Provider_Login_URL__c</fullName>
        <description>Identity Provider Login URL :  where generated SAML Request XML can be post.</description>
        <inlineHelpText>Identity Provider Login URL:  where generated SAML Request XML can be post.</inlineHelpText>
        <label>IDP Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__Identity_Provider_Logout_URL__c</fullName>
        <description>Used to invalidate existing SAML session</description>
        <inlineHelpText>Used to invalidate existing SAML session</inlineHelpText>
        <label>IDP Logout URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_E_Sign_Password__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck, if you do not want to use salesforce password in e-signature.</inlineHelpText>
        <label>Is Salesforce E-Sign Password?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_SAML_Auth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate/Deactivate the Federated SSO Process. Default is not checked (deactivate)</description>
        <inlineHelpText>Activate/Deactivate the Federated SSO Process. Default is not checked (deactivate)</inlineHelpText>
        <label>Use Federated SSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Portal_Id__c</fullName>
        <description>If logged in as a portal user mention the portal Id.</description>
        <inlineHelpText>If logged in as a portal user mention the portal Id.</inlineHelpText>
        <label>Portal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Template_Logo_Document_Name__c</fullName>
        <defaultValue>"123 Report Template Logo"</defaultValue>
        <label>Report Template Logo Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_Request_Certificate_Name__c</fullName>
        <description>SSO Certificate Name used to sign the SAML Request</description>
        <inlineHelpText>SSO Certificate Name used to sign the SAML Request</inlineHelpText>
        <label>SSO Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_Response_Provider__c</fullName>
        <description>SAML Response Provider URL: Used to validate the SAML response from un-authorized provider.</description>
        <inlineHelpText>SAML Response Provider URL: Used to validate the SAML response from un-authorized provider.</inlineHelpText>
        <label>SAML Response Provider URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_SSO_Name__c</fullName>
        <description>SAML SSO API Name</description>
        <inlineHelpText>SAML SSO API Name</inlineHelpText>
        <label>SAML SSO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SF_Base_Url__c</fullName>
        <description>Salesforce Base Url</description>
        <inlineHelpText>Salesforce Base Url</inlineHelpText>
        <label>Salesforce Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMPL123__SF_Login_URL__c</fullName>
        <defaultValue>"https://login.salesforce.com"</defaultValue>
        <inlineHelpText>For Ex: 
Prod/Dev: https://login.salesforce.com
Sandbox: https://test.salesforce.com
Custom Login: https://&lt;mydomain&gt;.salesforce.com</inlineHelpText>
        <label>Salesforce Login URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SSO_Session_Timeout_Limit__c</fullName>
        <defaultValue>60</defaultValue>
        <description>SSO Session Timeout Limit (in secs): Default to 60 seconds.</description>
        <inlineHelpText>SSO Session Time Limit: Default to 60 seconds.</inlineHelpText>
        <label>SSO Session Timeout Limit (in secs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Show_Unified_Audit_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck to view separate reports for Workflow History and Audit Trail.</inlineHelpText>
        <label>Show Unified Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Suppress_Insert_Audit_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suppress Insert Audit Records</description>
        <inlineHelpText>Suppress Insert Audit Records</inlineHelpText>
        <label>Suppress Insert Audit Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Consumer_Key__c</fullName>
        <description>Target Consumer Key</description>
        <label>Target Consumer Key</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Consumer_Secret__c</fullName>
        <description>Target Consumer Secret</description>
        <label>Target Consumer Secret</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Use_Remote_App_Auth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if remote app authentication is needed. By default it will authenticate using SOAP API.</description>
        <inlineHelpText>Check if remote app authentication is needed. By default it will authenticate using SOAP API.</inlineHelpText>
        <label>Use Remote App Auth</label>
        <type>Checkbox</type>
    </fields>
    <label>App Config</label>
</CustomObject>